--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -101,6 +101,12 @@
                     <span>Programs</span>
                     <span class="count" id="programsCount">0</span>
                 </button>
+                <button class="nav-item" data-view="taste">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M18.8 4c-.7-1.4-2.1-2.3-3.8-2.3C12.3 1.7 10.3 3 10 5.5 9.7 3 7.7 1.7 6 1.7c-1.7 0-3.1.9-3.8 2.3C1 5.3 1 7 2.3 8.6L10 16.5l7.7-7.9c1.3-1.6 1.3-3.3.1-4.6z" />
+                    </svg>
+                    <span>Your Taste</span>
+                </button>
             </nav>
 
             <div class="sidebar-divider"></div>
@@ -467,6 +473,48 @@
                             <input type="checkbox" id="appDetectionToggle">
                             <span class="slider round"></span>
                         </label>
+                    </div>
+                </section>
+
+                <div class="sidebar-divider" style="margin: 24px 0;"></div>
+
+                <section class="settings-section">
+                    <h3>Data Management</h3>
+                    <div class="setting-item">
+                        <label>Reset Library</label>
+                        <p style="font-size: 11px; color: var(--text-tertiary); margin-top: 4px; margin-bottom: 12px;">
+                            Remove all games from the library (this will NOT delete the actual game files)
+                        </p>
+                        <button class="action-btn" id="clearAllGamesBtn" style="background-color: rgba(239, 68, 68, 0.2); color: #ef4444; border: 1px solid rgba(239, 68, 68, 0.3);">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <polyline points="3 6 5 6 21 6" />
+                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" />
+                                <line x1="10" y1="11" x2="10" y2="17" />
+                                <line x1="14" y1="11" x2="14" y2="17" />
+                            </svg>
+                            <span>Delete All Games</span>
+                        </button>
+                    </div>
+                </section>
+
+                <div class="sidebar-divider" style="margin: 24px 0;"></div>
+
+                <section class="settings-section">
+                    <h3>Help & Feedback</h3>
+                    <div class="setting-item">
+                        <label>We'd Love Your Input</label>
+                        <p style="font-size: 11px; color: var(--text-tertiary); margin-top: 4px; margin-bottom: 12px;">
+                            Have ideas, bugs to report, or just want to say hello? Let us know!
+                        </p>
+                        <button class="action-btn primary" id="feedbackBtn">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
+                            </svg>
+                            <span>Send Feedback</span>
+                        </button>
                     </div>
                 </section>
             </div>
